--- a/src/BestProduct.css
+++ b/src/BestProduct.css
@@ -1,3 +1,9 @@
+.App-the-best-product-title {
+    text-align: center;
+    color: red;
+    margin-top: 20px;
+}
+
 .App-the-best-product {
     display: flex;
     justify-content: center;
